Added a resultLimit to getHistory and getLibraryHistory that defaults to the size if not defined
